# Snake4D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  web-build-and-deploy-github.bat  web-build-and-deploy-itch-io.bat  web-build-and-deploy.bat  web-build.bat  web-configure-and-build.bat  web-configure.bat  web-deploy-github.bat  web-deploy-itch-io.bat
Source/: CMakeLists.txt  GameSimulation.h  GeometryBuilder.cpp  GeometryBuilder.h  GridCamera4D.cpp  GridCamera4D.h  GridPathFinder4D.h  Main.cpp  Math4D.h  Scene4D.cpp  Scene4D.h
